# DFTPilot

./: README.md  pyproject.toml
app/: app.py  appn.py  appo.py
app/static/: index0.html
app/templates/: index.html  index0.html  indexo.html
ragp/: Readme.md  faiss.index  general_query.py  rag_generator.py  texts.npy  vasp_rag.py
ragp/app/: app.py
ragp/faiss_db/: vasp_index.faiss
scripts/: batch_predict.py  train.py
src/calculators/: calculator.py
src/data/: build_dataset.py  parse_vasp_json.py  rag_index_build.py
src/data/processed_data/: Readme.md  all.jsonl  rag.index  rag.index.meta.json
src/data/raw_data/: Readme.md
src/data/raw_data/10/: INCAR  job
src/data/raw_data/2/: POTCAR
src/data/raw_data/3/: OUTCAR
src/data/raw_data/5/: CONTCAR
src/data/raw_data/7/: KPOINTS
src/data/raw_data/9/: POSCAR
src/data/raw_data/ncl_35/: CONTCAR  INCAR  OUTCAR  job
src/data/raw_data/ncl_35/nested_folder/: INCAR  OUTCAR  job  vasprun.xml
src/modules/: models.py
src/utills/: graph_encoder.py  parse_vasp.py  serve_api.py  text_encoder.py
tests/: Notebook.ipynb
